Write custom_vault_path to fa_path.lua